Fixed an error where images would overflow on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@
     left: -15px;
 }
 
+img {
+ max-width:100%;
+ width:100%;
+}
+
 .interactive-section {
     margin-top: 1em;
     margin-bottom: 1em;
